// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardChart Component should handle API response states: error 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip
          t={[Function]}
          useGraphCardContext={[Function]}
        />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody
      className="curiosity-card__body"
    >
      <div
        className="blur"
      >
        <Chart
          chartLegend={[Function]}
          chartTooltip={[Function]}
          dataSets={[]}
          padding={
            {
              "bottom": 75,
              "left": 55,
              "right": 55,
              "top": 50,
            }
          }
          themeColor="blue"
          xAxisChartLabel={null}
          xAxisFixLabelOverlap={true}
          xAxisLabelIncrement={1}
          xAxisTickFormat={[Function]}
          xValueFormat={null}
          yAxisChartLabel={null}
          yAxisTickFormat={[Function]}
          yValueFormat={null}
        />
      </div>
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCardChart Component should handle API response states: fulfilled 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip
          t={[Function]}
          useGraphCardContext={[Function]}
        />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody
      className="curiosity-card__body"
    >
      <div
        className=""
      >
        <Chart
          chartLegend={[Function]}
          chartTooltip={[Function]}
          dataSets={[]}
          padding={
            {
              "bottom": 75,
              "left": 55,
              "right": 55,
              "top": 50,
            }
          }
          themeColor="blue"
          xAxisChartLabel={null}
          xAxisFixLabelOverlap={true}
          xAxisLabelIncrement={1}
          xAxisTickFormat={[Function]}
          xValueFormat={null}
          yAxisChartLabel={null}
          yAxisTickFormat={[Function]}
          yValueFormat={null}
        />
      </div>
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCardChart Component should handle API response states: pending 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip
          t={[Function]}
          useGraphCardContext={[Function]}
        />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody
      className="curiosity-card__body"
    >
      <div
        className="fadein"
      >
        <Loader
          skeletonProps={
            {
              "size": "sm",
            }
          }
          tableProps={{}}
          variant="graph"
        />
      </div>
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCardChart Component should render a basic component: basic 1`] = `
<Card
  className="curiosity-card curiosity-graph-card curiosity-usage-graph"
  isPlain={true}
>
  <CardHeader
    className="curiosity-card__header"
  >
    <CardTitle
      className="curiosity-card__title"
    >
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-graph.cardHeading, {})
        <GraphCardChartTitleTooltip
          t={[Function]}
          useGraphCardContext={[Function]}
        />
      </Title>
    </CardTitle>
  </CardHeader>
  <MinHeight
    isOnLoad={false}
    minHeight={0}
    useResizeObserver={[Function]}
  >
    <CardBody
      className="curiosity-card__body"
    >
      <div
        className=""
      >
        <Chart
          chartLegend={[Function]}
          chartTooltip={[Function]}
          dataSets={[]}
          padding={
            {
              "bottom": 75,
              "left": 55,
              "right": 55,
              "top": 50,
            }
          }
          themeColor="blue"
          xAxisChartLabel={null}
          xAxisFixLabelOverlap={true}
          xAxisLabelIncrement={1}
          xAxisTickFormat={[Function]}
          xValueFormat={null}
          yAxisChartLabel={null}
          yAxisTickFormat={[Function]}
          yValueFormat={null}
        />
      </div>
    </CardBody>
  </MinHeight>
</Card>
`;
